--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^3.3.0",
     "mjml": "^4.9.0",
+    "mock": "^0.1.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
     "path": "^0.12.7",
